--- a/assets/css/style-404.css
+++ b/assets/css/style-404.css
@@ -6,6 +6,8 @@
     display: block;
 }
 
+html, body {margin: 0; height: 100%; overflow: hidden}
+
 head {display: none;}
 
 h1 {font-family: 'Teko', Arial, Helvetica, sans-serif;
@@ -50,8 +52,7 @@ a:hover {
 }
 
 .pot-img {
-    width: 100%;
-    height: 100%;
+    margin: 0 auto;
     position: relative;
     top: 500px;
     z-index: 1;
