first drafting of testimonials page

--- a/assets/css/style-testimonials.css
+++ b/assets/css/style-testimonials.css
@@ -36,8 +36,8 @@ body {
 }
 
 .bg {
-    background: url(../images/index/index-bg-b.png) no-repeat;
-    background-position: right;
+    background: url(../images/testimonials/test-bg2.png) no-repeat;
+    background-position: 50%;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -159,25 +159,22 @@ nav {
 
 /* page header */
 header {
-    position: absolute;
+    padding-top: 20px;
+    position: relative;
     top: 0;
     width: 100%;
-    height: 175px;
+    height: 400px;
     display: grid;
-    grid-template-areas: 'logo-c page-name spacer';
-}
-
-.logo-c {
-    grid-area: logo-c;
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: 15% 70% 15%;
+    grid-template-rows: 40% 60%;
+    grid-template-areas: 
+    'logo-c'
+    'page-name';
 }
 
 .logo {
     background: url(../images/index/ronin-logo-clip.png) no-repeat;
     background-size: contain;
-    background-position: 25% 25%;
+    background-position: 50%;
 }
 
 .page-name {
@@ -186,11 +183,120 @@ header {
     line-height: 175px;
 }
 
-.spacer-l {
+.title {
+    background: url(../images/index/pb1.png) no-repeat;
+    background-size: auto 100px;
+    background-position: 50%;
 }
-.spacer {
-    grid-area: spacer;
+
+/* body */
+.testimonial-grid {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 550px;
+    row-gap: 150px;
+    width: 100%;
+    position: relative;
 }
+
+.pro-1 {
+    width: 100%;
+    background: url(../images/testimonials/fly-project-bg.png) no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    position: relative;
+}
+
+.pro-2 {
+    width: 100%;
+    background: url(../images/testimonials/pro-2-bg.png) no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.pro-3 {
+    width: 100%;
+    background: url(../images/testimonials/alison-crawford-prov.png) no-repeat;
+    background-size: cover;
+    background-position: right;
+    position: relative;
+}
+
+#pro-3-h2 {
+    padding: 0% 5% 2% 5%;
+}
+
+.pro-4 {
+    width: 100%;
+    background: url(../images/testimonials/pro-4-bg.png) no-repeat;
+    background-size: cover;
+    background-position: right;
+    position: relative;
+}
+
+.pro-5 {
+    width: 100%;
+    background: url(../images/testimonials/pro-5-bg.png) no-repeat;
+    background-size: cover;
+    background-position: right;
+    position: relative;
+}
+
+.pro-6 {
+    width: 100%;
+    background: url(../images/testimonials/pro-6-bg.png) no-repeat;
+    background-size: cover;
+    background-position: top right;
+    position: relative;
+}
+
+.pro-content {
+    background-color: #000000b8;
+    height: 550px;
+    position: relative;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 5% 42.5% 5% 42.5% 5%;
+    grid-template-rows: 15% 70% 15%;
+    grid-template-areas:
+        '. . . . .'
+        '. vid . test .';
+}
+
+.video-container {
+    grid-area: vid;
+    overflow: hidden;
+    /* 16:9 aspect ratio */
+    padding-top: 56.25%;
+    position: relative;
+    max-height: 437.32px;
+    max-width: 624.75px;
+}
+
+.video-container iframe {
+border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
+}
+
+.testimonial-about {
+    grid-area: test;
+    /* background-color: #00000090; */
+}
+
+.testimonial-about p {
+    padding: 0% 2% 3.5% 5%;
+    letter-spacing: 2px;
+}
+
+.testimonial-about h2 {
+    padding: 3% 5% 2% 5%;
+}
+
+
 
 /* footer */
 .ink-partition {
