--- a/assets/css/style-testimonials.css
+++ b/assets/css/style-testimonials.css
@@ -199,6 +199,10 @@ header {
     position: relative;
 }
 
+.col-heading {
+    display: none;
+}
+
 .pro-1 {
     width: 100%;
     background: url(../images/testimonials/fly-project-bg.png) no-repeat;
@@ -260,7 +264,8 @@ header {
     grid-template-rows: 15% 70% 15%;
     grid-template-areas:
         '. . . . .'
-        '. vid . test .';
+        '. vid . test .'
+        '. . . . .';
 }
 
 .video-container {
@@ -448,6 +453,34 @@ border: 0;
         font-family: 'Times New Roman', Times, serif;
     }
 
+}
+
+/* smaller screens */
+@media screen and (max-width: 1350px) {
+.pro-content {
+    background-color: #000000b8;
+    height: 550px;
+    position: relative;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 2% 96% 2%;
+    grid-template-rows: 2% 40% 2% 54% 2%;
+    grid-template-areas:
+    '. . .'    
+    '. vid .'
+        '. . .'
+        '. test .'
+        '. . .';
+}
+
+.video-container {
+    grid-area: vid;
+    overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+}
 }
 
 /* animations */
