--- a/assets/css/style-testimonials.css
+++ b/assets/css/style-testimonials.css
@@ -50,13 +50,6 @@ body {
     animation-fill-mode: forwards;
 }
 
-.bg-overlay {
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-}
-
 /* navigation */
 nav {
     position: fixed;
@@ -237,26 +230,31 @@ header {
 .project-container {
     margin: 0 auto 50px auto;
     padding: 40px 3%;
-      display: grid;
-      grid-template-areas:
+    display: grid;
+    grid-template-areas:
         'iframe text';
-      width: 80vw;
-    }
-    
-    iframe { grid-area: iframe;
+    width: 80vw;
+}
+
+iframe {
+    grid-area: iframe;
     margin: auto auto;
     width: 30vw;
-    height: 350px;}
-    .testimonial-text { grid-area: text;}
-    
-    .project-container > div {
-      background-color: #000000b8;
-      text-align: left;
-      padding: 20px 5%;
-      font-size: 1em;
-      width: 35vw;
-      margin: auto auto;
-    }
+    height: 350px;
+}
+
+.testimonial-text {
+    grid-area: text;
+}
+
+.project-container>div {
+    background-color: #000000b8;
+    text-align: left;
+    padding: 20px 5%;
+    font-size: 1em;
+    width: 35vw;
+    margin: auto auto;
+}
 
 /* footer */
 .ink-partition {
@@ -266,17 +264,6 @@ header {
     background-size: cover;
     position: absolute;
     z-index: 1;
-    opacity: 0;
-    animation-name: ink-opening;
-    animation-delay: 1s;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-}
-
-.footer {
-    grid-area: footer;
-    position: relative;
 }
 
 #social-footer {
@@ -413,34 +400,34 @@ header {
 /* smaller screens */
 @media screen and (max-width: 1100px) {
     .project-container {
-          grid-template-areas:
+        grid-template-areas:
             'iframe'
             'text';
-          width: 80vw;
-          row-gap: 30px;
-        }
-        
-        iframe {
+        width: 80vw;
+        row-gap: 30px;
+    }
+
+    iframe {
         width: 66vw;
     }
-   
-        .project-container > div {
-          width: 58vw;
-        }
+
+    .project-container>div {
+        width: 58vw;
+    }
 }
 
 @media screen and (max-width: 770px) {
     .project-container {
-          width: 85vw;
-        }
-        
-        iframe {
+        width: 85vw;
+    }
+
+    iframe {
         width: 75vw;
     }
-   
-        .project-container > div {
-          width: 67vw;
-        }
+
+    .project-container>div {
+        width: 67vw;
+    }
 }
 
 @media screen and (max-width: 545px) {
@@ -451,36 +438,37 @@ header {
 
 @media screen and (max-width: 420px) {
     .project-container {
-          width: 95vw;
-        }
-        
-        iframe {
+        width: 95vw;
+    }
+
+    iframe {
         width: 90vw;
     }
-   
-        .project-container > div {
-          width: 82vw;
-        }
-        #suji {
-            background-position: 70% 0%;
-        }
+
+    .project-container>div {
+        width: 82vw;
+    }
+
+    #suji {
+        background-position: 70% 0%;
+    }
 }
 
 @media screen and (max-width: 300px) {
     .project-container {
-          width: 100%;
-          padding: 40px 5px;
-        }
-        
-        iframe {
+        width: 100%;
+        padding: 40px 5px;
+    }
+
+    iframe {
         width: 100%;
     }
-   
-        .project-container > div {
-          width: 100%;
-        }
+
+    .project-container>div {
+        width: 100%;
+    }
 }
-    
+
 
 /* animations */
 /* background and layout */
@@ -518,16 +506,5 @@ header {
         opacity: 1;
         top: 0%;
         right: 0%;
-    }
-}
-
-/* footer */
-@keyframes ink-opening {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
     }
 }
