add responsive design to FAQ

--- a/assets/css/style-faq.css
+++ b/assets/css/style-faq.css
@@ -176,7 +176,7 @@ header {
 .page-name {
     grid-area: page-name;
     text-align: center;
-    line-height: 175px;
+    margin: 50px auto;
 }
 
 /* body */
@@ -339,7 +339,38 @@ header {
 }
 
 /* smaller screens */
+@media screen and (max-width: 1100px) {
+    .bg {
+        background-position: 40% 100%;  
+}
+}
 
+@media screen and (max-width: 915px) {
+.faq {
+    width: 75vw;
+}
+}
+
+@media screen and (max-width: 900px) {
+    .bg {
+        background-position: 30% 100%;  
+}
+}
+
+@media screen and (max-width: 420px) {
+    .bg {
+        background-position: 25% 100%;  
+}
+.faq {
+    width: 85vw;
+}
+}
+
+@media screen and (max-width: 300px) {
+    .bg {
+        background-position: 15% 100%;
+    }  
+}
 
 
 /* animations */
