--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -34,8 +34,9 @@ body {
 }
 
 .bg {
-    background: url(../images/index/index-bg-b.png) no-repeat;
-    background-position: right;
+    background: url(../images/testimonials/test-bg2.png) no-repeat, #00000061;
+    background-blend-mode: overlay;
+    background-position: 100%;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -46,18 +47,11 @@ body {
     animation-fill-mode: forwards;
 }
 
-.bg-overlay {
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-}
-
 /* navigation */
 nav {
     position: fixed;
     z-index: 2;
-    opacity: 0;
+    opacity: 1;
     top: 4%;
     right: 10%;
     width: 220px;
@@ -161,9 +155,9 @@ header {
     position: relative;
     top: 0;
     width: 100%;
-    height: 400px;
+    height: 250px;
     display: grid;
-    grid-template-rows: 40% 60%;
+    grid-template-rows: 50% 50%;
     grid-template-areas:
         '.'
         'page-name';
@@ -181,7 +175,101 @@ header {
     margin: 50px auto;
 }
 
+/* body and contact form */
+label {
+    display: block;
+    padding-bottom: 3px;
+}
 
+.contact-form {
+    width: 100%;
+    display: grid;
+    height: 775px;
+}
+
+.signup-form {
+    margin: 50px auto 0 auto;
+    color: #f7f7f8;
+    background-color: #00000061;
+    max-width: 400px;
+    position: relative;
+    height: 600px;
+    padding: 30px;
+}
+
+.signup-form > h2 {
+    color: #f7f7f8;
+    margin-bottom: 20px;
+}
+
+.text {
+    background: transparent;
+    color: #f7f7f8;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 6px;
+    padding: 0 0 0 5px;
+    backdrop-filter: blur(10px);
+}
+
+.text:focus {
+    border-radius: 0px;
+    background-color: #f7f7f8;
+    transition-duration: 1s;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 2px;
+    color: #000000;
+}
+
+.text-area {
+    background: transparent;
+    color: #f7f7f8;
+    width: 100%;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 6px;
+    padding: 5px 0 0 5px;
+    backdrop-filter: blur(10px);
+    font-size: 18px;
+    transition-duration: 1s;
+    font-family: 'Monsterrat', 'roboto', sans-serif;
+}
+
+.text-area:focus {
+    border-radius: 0px;
+    background-color: #f7f7f8;
+    transition-duration: 1s;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 2px;
+    color: #000000;
+}
+
+.text-input:hover {
+    border-color: #db0a0b;
+}
+
+.contact-button {
+    float: right;
+    margin-top: 40px;
+    border: 1px solid #f7f7f8;
+    border-radius: 2px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #ffffff00;
+    color: #f7f7f8;
+}
+
+.contact-button:hover {
+    background-color: #f7f7f8;
+    color: #000000;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 4px;
+    padding: 15px 21px;
+    transition-duration: 1s;
+}
 
 /* footer */
 .ink-partition {
@@ -191,12 +279,7 @@ header {
     background-size: cover;
     position: absolute;
     z-index: 1;
-    opacity: 0;
-    animation-name: ink-opening;
-    animation-delay: 1s;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
+    opacity: 1;
 }
 
 .footer {
@@ -371,16 +454,5 @@ header {
         opacity: 1;
         top: 0%;
         right: 0%;
-    }
-}
-
-/* footer */
-@keyframes ink-opening {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
     }
 }
