--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -8,6 +8,7 @@
 
 h1 {
     font-family: 'teko', impact, sans-serif;
+    letter-spacing: 4px;
 }
 
 h2 {
@@ -36,7 +37,7 @@ body {
 .bg {
     background: url(../images/testimonials/test-bg2.png) no-repeat, #00000061;
     background-blend-mode: overlay;
-    background-position: 100%;
+    background-position: 45%;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -193,7 +194,7 @@ label {
     background-color: #00000061;
     max-width: 400px;
     position: relative;
-    height: 600px;
+    height: 525px;
     padding: 30px;
 }
 
@@ -221,6 +222,7 @@ label {
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 2px;
     color: #000000;
+    backdrop-filter: blur(0px);
 }
 
 .text-area {
@@ -244,6 +246,7 @@ label {
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 2px;
     color: #000000;
+    backdrop-filter: blur(0px);
 }
 
 .text-input:hover {
